# mk_cxt

./: .gitignore  Cargo.toml  README.md  manual coding.csv
src/: err.rs  lib.rs  main.rs
src/lkup/: create.rs  fill.rs  lang.rs  mod.rs
src/locs/: cities.rs  countries.rs  mod.rs  scopes.rs
src/lups/: create.rs  fill.rs  lang.rs  mod.rs  objects.rs  orgs.rs  studies.rs
src/orgs/: acros.rs  chinese.rs  companies.rs  english.rs  french.rs  japan.rs  japanese.rs  langs.rs  mod.rs  names.rs  ror.rs
src/setup/: cli_reader.rs  config_reader.rs  db_pars.rs  log_helper.rs  mod.rs
src/sql/: make_ror_tables.rs  mod.rs  process_companies.rs
