[package]
name = "mk_cxt"
version = "0.1.0"
authors = ["Steve Canham <stevecanham@outlook.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mk_cxt"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.12"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "macros", "chrono" ] }
tokio = { version = "1.45.1", features = ["macros", "rt"]}
clap = { version = "4.5.40", features = ["cargo"] }
chrono = { version = "0.4.41", features = ["clock"] }
log = "0.4.27"
log4rs = "1.3.0"
toml = "0.8.23"
csv = "1.3.1"
