[package]
name = "mk_cxt"
version = "0.1.0"
authors = ["Steve Canham <stevecanham@outlook.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mk_cxt"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "macros", "chrono" ] }
tokio = { version = "1.49.0", features = ["macros", "rt"]}
clap = { version = "4.5.54", features = ["cargo"] }
chrono = { version = "0.4.43", features = ["clock"] }
log = "0.4.29"
log4rs = "1.4.0"
toml = "0.9.8"
csv = "1.4.0"
directories = "6.0.0"


